--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-/* template */
+
+p h1 h4 {
+  color: white;
+}
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -69,61 +73,217 @@
 
 
 /* idk */
-.card-body span{
-  display: flex;
-  gap: 2px;
-}
 
+/* navbar */
 input {
-  color: white;
+  color: black;
   border: 0px;
   width: 150px;
   transition: width 0.3s ease;
-  background-color: #212529;
+  background: none;
 }
 
-input:focus{
+input::placeholder{
+  color: black;
+}
+
+input:focus {
   border-radius: 0px;
   outline: 0px;
-  border-bottom: white solid 2px;
   width: 400px;
 }
 
 i {
-  color: white;
+  color: black;
   margin-left: 10px;
+  text-align: center;
+  justify-content: center;
+  display: flex;
 }
 
-.container-navbar span{
+.navbar{
+  background: none;
+}
+
+.container-navbar {
+  background: none;
+}
+
+.container-navbar span {
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
+  padding: 3px 10px;
+  height: 28px;
+  border-radius: 14px;
 }
 
+.navbar-gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, .7) 0%, rgba(0, 0, 0, 0) 100%);
+  padding: 1rem;
+  border: none; /* Remove any borders */
+  box-shadow: none; /* Remove any shadow */
+}
+
+/* Carousel */
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.b-example-divider {
+  width: 100%;
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.btn-bd-primary {
+  --bd-violet-bg: #712cf9;
+  --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+
+  --bs-btn-font-weight: 600;
+  --bs-btn-color: var(--bs-white);
+  --bs-btn-bg: var(--bd-violet-bg);
+  --bs-btn-border-color: var(--bd-violet-bg);
+  --bs-btn-hover-color: var(--bs-white);
+  --bs-btn-hover-bg: #6528e0;
+  --bs-btn-hover-border-color: #6528e0;
+  --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+  --bs-btn-active-color: var(--bs-btn-hover-color);
+  --bs-btn-active-bg: #5a23c8;
+  --bs-btn-active-border-color: #5a23c8;
+}
+
+.bd-mode-toggle {
+  z-index: 1500;
+}
+
+.bd-mode-toggle .dropdown-menu .active .bi {
+  display: block !important;
+}
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 27rem;
+}
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
+.carousel-caption h1{
+  font-weight: bold;
+}
+
+.carousel a{
+  background-color: white;
+  color: black;
+  font-size: small;
+  border: 1px solid white;
+}
+.carousel a:hover{
+  background: none;
+  border: 1px solid white;
+}
+
+/* Popular */
+
+
+
+/* content */
 .card {
   position: relative;
-  overflow: hidden; /* Membatasi gambar agar tidak keluar dari container */
+  overflow: hidden;
+  border: none;
+  border-radius: 15px;
+  width: 100%;
+  min-height: 300px;
+  background-color: black;
 }
 
 .card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Pastikan gambar menyesuaikan tanpa mengubah proporsi */
+  min-height: 300px;
+  object-fit: cover;
   transition: transform 0.3s ease-in-out;
 }
 
 .card:hover img {
-  transform: scale(1.1); /* Zoom in */
+  transform: scale(1.1);
 }
 
-.card-body {
-  position: relative;
-  z-index: 1; /* Pastikan card-body tetap di atas gambar */
-  background: white;
-  padding: 16px; /* Atur sesuai kebutuhan */
-}
-
-.col-2{
- scale: 0.6;
-overflow: hidden;
+/* footer */
+.mb-1 {
+  color: white;
 }
