--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: black;
+  color: white;
 }
 
 h1 {
@@ -47,7 +49,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #525151;
 }
 button:focus,
 button:focus-visible {
