edit search function

--- a/src/App.css
+++ b/src/App.css
@@ -283,6 +283,14 @@ i {
   transform: scale(1.1);
 }
 
+.search-results {
+  margin-top: 10vh;
+}
+
+.container-title {
+  margin-bottom: 30px;
+}
+
 /* footer */
 .mb-1 {
   color: white;
